modified qPCL plugin codebase so that it is now separated in a shared part and in a static libraries. Both libraries are then linked against the plugin itself

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ if( ${OPTION_EXPORT_TARGETS} )
 
     if(${INSTALL_QPCL_PLUGIN})
         # we also export the shared lib produced by that
-        set(TARGETS_TO_EXPORT ${TARGETS_TO_EXPORT} QPCL_PLUGIN QPCL_PLUGIN_UTILS_LIB)
+        set(TARGETS_TO_EXPORT ${TARGETS_TO_EXPORT} QPCL_PLUGIN QPCL_PLUGIN_UTILS_LIB QPCL_PLUGIN_FILTERS)
     endif()
 
     if( ${OPTION_BUILD_CCVIEWER} )
