--- a/CCPConfig.cmake.in
+++ b/CCPConfig.cmake.in
@@ -49,5 +49,8 @@ include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 include_directories(${QT_QTOPENGL_INCLUDE_DIR})
 
-
+ADD_DEFINITIONS(${QT_DEFINITIONS})
+ADD_DEFINITIONS(-DQT_PLUGIN)
+ADD_DEFINITIONS(-DQT_NO_DEBUG)
+ADD_DEFINITIONS(-DQT_SHARED)
 
